started the item 16 of the task3410